completed belt requirements

--- a/beltExam2Angular/src/app/home/home.component.html
+++ b/beltExam2Angular/src/app/home/home.component.html
@@ -13,7 +13,7 @@
         <td>{{product._id}}</td>
         <td>{{product.name}}</td>
         <td>{{product.qty}}</td>
-        <td>{{product.price}}</td>
+        <td>${{product.price}}</td>
         <td>
           <button [routerLink]="['../products/', product._id]">Details</button>
           <button [routerLink]="['../products/edit/', product._id]">Edit</button>
