--- a/beltExam2Angular/src/app/edit/edit.component.html
+++ b/beltExam2Angular/src/app/edit/edit.component.html
@@ -6,11 +6,43 @@
 <p *ngIf="validationError.qty">{{validationError.qty.message | json}}</p>
 <p *ngIf="validationError.price">{{validationError.price.message | json}}</p>
 
-Name: <input type="text" name= "name" required minlength="3" [(ngModel)] = "theProduct.name" #name = "ngModel"/><br><br>
-Qty: <input type="number" name= "qty" required min="1" [(ngModel)] = "theProduct.qty" #qty = "ngModel"/><br><br>
-Price: <input type="number" name= "price" required min="1" [(ngModel)] = "theProduct.price" #price = "ngModel"/><br><br>
+<div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger">
+    <div *ngIf="name.errors.required">
+        Name is required.
+    </div>
+    <div *ngIf="name.errors.minlength">
+        Name must be at least 3 characters long.
+    </div>
+</div>
 
-<input type="button" value="Update" (click) = "updateProduct()">
+<div *ngIf="qty.invalid && (qty.dirty || qty.touched)" class="alert alert-danger">
+    <div *ngIf="qty.errors.required">
+        Quantity is required.
+    </div>
+    <div *ngIf="qty.errors.pattern">
+        Quantity cannot be less than 0.
+    </div>
+</div>
 
-<input type="button" value="Reset" (click) = "Reset()">
+<div *ngIf="price.invalid && (price.dirty || price.touched)" class="alert alert-danger">
+    <div *ngIf="price.errors.required">
+        Price is required.
+    </div>
+    <div *ngIf="price.errors.pattern">
+        Price must be more than 0.
+    </div>
+</div>
+
+<form class="newProduct">
+  Name: <input type="text" name= "name" required minlength="3" [(ngModel)] = "theProduct.name" #name = "ngModel"/><br><br>
+  Qty: <input type="text" name= "qty" required pattern="^\+?(0|[1-9]\d*)$" [(ngModel)] = "theProduct.qty" #qty = "ngModel"/><br><br>
+  Price: <input type="text" name= "price" required pattern="^\+?[1-9]\d*$" [(ngModel)] = "theProduct.price" #price = "ngModel"/><br><br>
+
+  <input *ngIf="!(name.errors || qty.errors || price.errors)" type="button" value="Update" (click) = "updateProduct()" > 
+  <input *ngIf="(name.errors || qty.errors || price.errors)" type="button" value="Update" disabled = true> 
+</form>
+
+<!-- <input type="button" value="Update" (click) = "updateProduct()"> -->
+
+<input type="button" value="Reset" (click) = "reset()">
 
